fix: alignment at about seccion

--- a/style.css
+++ b/style.css
@@ -488,11 +488,6 @@ nav {
   display: block;
 }
 
-.cardServicesImage {
-margin-left: auto;
-margin-right: auto;
-}
-
 
 .containerProjects{
   display: grid;
@@ -720,6 +715,8 @@ margin-right: auto;
   text-align: left;
   padding-left: 5%;
   padding-right: 5%;
+  margin-right: auto;
+  flex-grow: 1;
 }
 @media screen and (max-width: 600px) {
   #textAbout{
